# LibVCTestSO

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build_test_binary.sh  build_test_binary_fast.sh  deploy.sh  main.cpp  test.cpp
externalLibrary/: oldexample.rs
externalLibrary/testlib/: Cargo.toml
externalLibrary/testlib/src/: build.rs  interface_rs.rs  lib.rs
